--- a/test.yaml
+++ b/test.yaml
@@ -18,7 +18,7 @@ spec:
         app: test
     spec:
       containers:
-      - image: pbsem2/new_imge
-        name: new-imge-7drz2
+      - image: pbsem2/new_image
+        name: new-image-9fm9v
         resources: {}
 status: {}
