Commit for mejnik

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:postgresql://batyr.db.elephantsql.com:5432/obauputb
+spring.datasource.username=obauputb
+spring.datasource.password=IyELRXpf5tGzTJhhojCSjUYFzXWOETNN
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+test.run.integration=False
+spring.data.rest.base-path=/api
