--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,19 @@
 			<artifactId>logzio-logback-appender</artifactId>
 			<version>1.0.22</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.dropbox.core</groupId>
+			<artifactId>dropbox-core-sdk</artifactId>
+			<version>6.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-graphql</artifactId>
+		</dependency>
 	</dependencies>
 
 
