--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.data.rest.base-path=/api
 management.endpoint.health.probes.enabled=true
 management.health.livenessState.enabled=true
 management.health.readinessState.enabled=true
+dropbox.accessToken = sl.Bsas4CMVQ8k6Fr8_bCCywglAx_7EJVtIhrWnLvMPNmCSz_JIGbLKAVa4ZsQoctLbxrBqqsO3c2HXac-3kCX0SONfiNasv4erpl191aRGE8FoX4TxFDC0n_Q7YykydgIzfWNcDekwDm-S4M_XTm7N
+spring.datasource.hikari.maximum-pool-size=1
