--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -9,9 +10,11 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "http-proxy-middleware": "^2.0.6",
+    "konva": "^9.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.10",
     "react-router-dom": "^6.21.0",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
