--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,24 @@ spring.datasource.url=jdbc:postgresql://batyr.db.elephantsql.com:5432/obauputb
 spring.datasource.username=obauputb
 spring.datasource.password=IyELRXpf5tGzTJhhojCSjUYFzXWOETNN
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.platform=postgres
 spring.jpa.hibernate.ddl-auto=update
 test.run.integration=False
-spring.data.rest.base-path=/api
+spring.data.rest.base-path=/
 management.endpoint.health.probes.enabled=true
 management.health.livenessState.enabled=true
 management.health.readinessState.enabled=true
-dropbox.accessToken = sl.Bsas4CMVQ8k6Fr8_bCCywglAx_7EJVtIhrWnLvMPNmCSz_JIGbLKAVa4ZsQoctLbxrBqqsO3c2HXac-3kCX0SONfiNasv4erpl191aRGE8FoX4TxFDC0n_Q7YykydgIzfWNcDekwDm-S4M_XTm7N
+spring.application.name=dropbox
+spring.profiles.active=api
+spring.config.import=optional:configserver:http://52.226.106.6:8888,optional:configserver:http://localhost:8888/
+#dropbox.accessToken = sl.BtTmEl_CXfyjevB-J0IsKcPmsZPtWmpsmIvDVvgYS0Uwoa04Tn1ada-C6_PMF_4IDAIcrhIB7So2dlQiXcz5ZhObI9GLzqhlGN0UyrnilZiQOs3NWKTjK5dW_WpByAnfDeEfVsutQeGSsySGPkgh
 spring.datasource.hikari.maximum-pool-size=1
+server.port=8082
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
+management.endpoints.web.exposure.include=*
+spring.graphql.graphiql.enabled=true
+server.tomcat.relaxed-query-chars=|,{,},[,]
+graphql.servlet.mapping=/api/users/graphql
+spring.graphql.path=/api/users/graphql
+#spring.cloud.config.enabled=false
