--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,6 @@ spring.graphql.graphiql.enabled=true
 server.tomcat.relaxed-query-chars=|,{,},[,]
 graphql.servlet.mapping=/api/users/graphql
 spring.graphql.path=/api/users/graphql
+logging.level.org.apache.http=DEBUG
+logging.level.httpclient.wire=DEBUG
 #spring.cloud.config.enabled=false
