--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -15,8 +15,9 @@ spec:
       containers:
         - image: pbsem2/frontend_image:latest
           name: frontend
+          imagePullPolicy: "Always"
           ports:
-            - containerPort: 3000
+            - containerPort: 80
               name: server
 
 ---
@@ -28,7 +29,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 3000
+    - port: 80
       protocol: TCP
       targetPort: server
   selector:
