--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.platform=postgres
 spring.jpa.hibernate.ddl-auto=update
 test.run.integration=False
 spring.data.rest.base-path=/
+management.endpoints.web.base-path=/api/users/
 management.endpoint.health.probes.enabled=true
 management.health.livenessState.enabled=true
 management.health.readinessState.enabled=true
